Integrated Admin creation

--- a/src/views/ownerDashboard.ejs
+++ b/src/views/ownerDashboard.ejs
@@ -198,7 +198,8 @@
             <div class="owner-subtitle">Complete control and management of the CodeSecure platform</div>
         </div>
 
-        <!-- Statistics Section -->
+    <div id="dashboardMessage" class="message" style="display:none;"></div>
+    <!-- Statistics Section -->
         <div class="stats-grid">
             <div class="stat-card">
                 <div class="stat-number" id="totalUsers">-</div>
