--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -43,7 +43,7 @@
             </div>
             <div class="contributor-details">
               <div class="detail-item">
-                <span class="detail-icon">📧</span>
+                <img src="/images/googleIcon.svg" alt="Email" class="detail-icon-svg">
                 <span class="detail-text">khobragradesaumya@gmail.com</span>
               </div>
               <div class="detail-item">
@@ -64,7 +64,7 @@
             </div>
             <div class="contributor-details">
               <div class="detail-item">
-                <span class="detail-icon">📧</span>
+                <img src="/images/googleIcon.svg" alt="Email" class="detail-icon-svg">
                 <span class="detail-text">saptanshuwanjari63@gmail.com</span>
               </div>
               <div class="detail-item">
@@ -85,7 +85,7 @@
             </div>
             <div class="contributor-details">
               <div class="detail-item">
-                <span class="detail-icon">📧</span>
+                <img src="/images/googleIcon.svg" alt="Email" class="detail-icon-svg">
                 <span class="detail-text">26hardiksharma@gmail.com</span>
               </div>
               <div class="detail-item">
@@ -106,7 +106,7 @@
             </div>
             <div class="contributor-details">
               <div class="detail-item">
-                <span class="detail-icon">📧</span>
+                <img src="/images/googleIcon.svg" alt="Email" class="detail-icon-svg">
                 <span class="detail-text">jaladbhairav71@gmail.com</span>
               </div>
               <div class="detail-item">
@@ -127,7 +127,7 @@
             </div>
             <div class="contributor-details">
               <div class="detail-item">
-                <span class="detail-icon">📧</span>
+                <img src="/images/googleIcon.svg" alt="Email" class="detail-icon-svg">
                 <span class="detail-text">pramash.cse@gmail.com</span>
               </div>
               <div class="detail-item">
