--- a/src/views/adminDashboard.ejs
+++ b/src/views/adminDashboard.ejs
@@ -14,6 +14,7 @@
       <nav class="navigation-menu">
         <a href="/admin-dashboard" class="nav-link">Dashboard</a>
         <a href="/admin/exams/create" class="nav-link">Create Exam</a>
+        <a href="/manage-homepage" class="nav-link">Homepage</a>
         <a href="#" class="nav-link" onclick="showResults()">Results</a>
         <a href="#" class="nav-link" onclick="showSettings()">Settings</a>
       </nav>
